@@ -142,6 +142,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #18116: getpass was always getting an error when testing /dev/tty,
+  and thus was always falling back to stdin.  It also leaked an open file
+  when it did so.  Both of these issues are now fixed.
+
 - Issue #17198: Fix a NameError in the dbm module.  Patch by Valentina
   Mukhamedzhanova.
 
